--- a/templates/homepage/allProduct.html
+++ b/templates/homepage/allProduct.html
@@ -21,17 +21,20 @@
             <div class="row p-0 m-0">
                 <div class="col-lg-12">
                       
-                    <div class="grid">
+                    <div class="row">
                         
                         {% for i in product %}
-                        <a href="{%url 'homepage:productDetails' i.id%}">
-                            <div class="element-item development">
-                               
-                                <img class="img-fluid" src="{{i.image.url}} " alt="alternative">
-                                <p><strong>{{i.name}}</strong> - {{i.description|truncatewords:5|safe}}</p>
-                         
-                            </div>
-                        </a>
+                        <div class="col-12 col-lg-4 col-md-4">
+                            <a href="{%url 'homepage:productDetails' i.id%}">
+                                <div class="element-item development">
+                                   
+                                    <img class="img-fluid" src="{{i.image.url}} " alt="alternative">
+                                    <p><strong>{{i.name}}</strong> - {{i.description|truncatewords:5|safe}}</p>
+                             
+                                </div>
+                            </a>
+                        </div>
+                       
                        
                         {% endfor %}
                             
