--- a/templates/homepage/blog.html
+++ b/templates/homepage/blog.html
@@ -13,32 +13,55 @@
     <!-- Services -->
     <div id="services" class="cards-1">
         <div class="container">
- 
-               
-            <h4 class="text-center">Blogs World</h4>
-            <hr>
+            <h4 class="text-center">Blogs</h4>
+
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-12 col-lg-12">
+                  
+                    <div class="d-flex">
+                        <input type="text" name="search" id="" class="form-control d-inline" placeholder="Search Any Content Here">
+                        <button class="ms-2 btn-solid-sm">
+                            Search
+                        </button>
+                    </div>
+                   
+                </div>
+                <hr class="mt-3">
+              
+            </div>
+               
+           
+            <div class="row">
+                <div class="col-lg-2 col-md-2 col-12">
+                    <h6>Browse Topic</h6>
+                    {% for i in category  %}
+                    <div class="m-0 pt-2 p-0">
+                        <button class="btn-solid-sm">
+                            {{i.name}}
+                        </button>
+                    </div>
                         
-                        {% for i in blog %}
-                        <a href="{%url 'homepage:blogV' i.id%}">
-                            <div class="card me-3 mt-0" style="height:300px; cursor: pointer;">
-                                <!-- <div class="text-center">
-                                    <img src="{{service.image.url}}" alt="{{service.name}}" srcset="" style="height: 140px; width:140px;">
-                                </div> -->
-                                <div class="card-body">
-                                    <h5 class="card-title text-center">{{i.title}}</h5>
-                                    <p>{{i.description|truncatewords:20|safe}}</p>
-                                  
-                                </div>
-                            </div> 
-                        </a>
-                       
-                        {% endfor %}
-                            
-                      
-                
-                    </a>
+                    {% endfor %}
+                </div>
+                <div class="col-lg-10 col-md-10 col-12 text-center">
+                        <div class="row">
+                            {% for i in blog %}
+                            <div class="col-md-4 col-12">
+                                <a href="{%url 'homepage:blogV' i.id%}">
+                                    <div class="card" style="height:300px; width: 100%; cursor: pointer;">
+                                        <!-- <div class="text-center">
+                                            <img src="{{service.image.url}}" alt="{{service.name}}" srcset="" style="height: 140px; width:140px;">
+                                        </div> -->
+                                        <div class="card-body">
+                                            <h5 class="card-title text-center">{{i.title}}</h5>
+                                            <p>{{i.description|truncatewords:20|safe}}</p>
+                                          
+                                        </div>
+                                    </div> 
+                                </a>
+                            </div>
+                            {% endfor %}
+                        </div>
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
