--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -1,10 +1,11 @@
 {% load static %}
+{% load pwa %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    {% progressive_web_app_meta %}
     {% block seo %}
         <!-- SEO Meta Tags -->
         <meta name="description" content="Your description">
@@ -41,7 +42,7 @@
     <link href="{%static 'css/styledb.css'%} " rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="{%static 'images/favicon.png'%} ">
+    <link rel="icon" href="{%static 'images/logo.jpg'%} ">
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbarExample">
     
