--- a/templates/homepage/ceo.html
+++ b/templates/homepage/ceo.html
@@ -10,9 +10,42 @@
 
     </div>
     
-    <div class="container">    
+    <div class="container pt-3">    
         <h4 class="text-center">Our CEO Message</h4>
-    
+        <div class="row pt-3">
+            <div class="col-lg-4">
+                <div class="image-container">
+                    <img class="img-fluid" src="https://scontent.fktm14-1.fna.fbcdn.net/v/t39.30808-6/268350580_1523756371326713_4493013445092843791_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=xjeAUmuEsyMAX-OWc8d&tn=r-1kUerRraeUjJJK&_nc_ht=scontent.fktm14-1.fna&oh=00_AT8TYcoeRZYrcLJMGzKPDe8wh2vXm4Qozygm2pe5X4qUng&oe=62854BD2" alt="alternative">
+                </div> <!-- end of image-container -->
+            </div> <!-- end of col -->
+            <div class="col-lg-8">
+                <h4>CEO Message</h4>
+                <p>After the foundation of this company, we have come a long way and we have more to go. We started our journey in 2018 and we have spent these past 4 years continuing to satisfy our clients and building our brand; Wake and Tech Nepal has now become one of the top IT companies in Nepal.</p>
+                <h4>What we have done?</h4>
+                <p>In these past 4 years, we have gone through a lot of changes like</p>
+                <ul class="list-unstyled li-space-lg">
+                    <li class="d-flex">
+                        <i class="fas fa-chevron-right"></i>
+                        <div class="flex-grow-1">We have tripled the workforce and have met the demands of the entirety of our clients.</div>
+                    </li>
+                    <li class="d-flex">
+                        <i class="fas fa-chevron-right"></i>
+                        <div class="flex-grow-1">We are now a leading IT company in Nepal</div>
+                    </li>
+                    <li class="d-flex">
+                        <i class="fas fa-chevron-right"></i>
+                        <div class="flex-grow-1">We have reached a responsible and prestigious position and we cannot disappoint our customers</div>
+                    </li>
+                  
+                </ul>
+                <p>
+                    It is also important to note that we must fulfill what we have committed and to do so, we all, our team and our clients and also our future clients have to work in coordination where there would be no disputes and dissatisfaction in both sides.
+                    I hope this provides you with a few reasons to get to know Wake and tech Nepal better. Whether you are a potential customer, a small business partner, or a future employee, we look forward to finding out how we can work together to bring service to life.
+
+                </p>
+          
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
     </div> <!-- end of container -->
 
 
