--- a/templates/homepage/codework.html
+++ b/templates/homepage/codework.html
@@ -6,7 +6,9 @@
 
 
 {% block content %}
+        <div class="maintain" style="height: 80px;">
 
+        </div>
        <!-- Contact -->
        <div id="contact" class="form-1">
         <div class="container">
