--- a/templates/homepage/contact.html
+++ b/templates/homepage/contact.html
@@ -26,7 +26,7 @@
                 <div class="col-lg-10 offset-lg-1">
                     
                     <!-- Contact Form -->
-                    <form>
+                    <form class="cotactform">
                         <div class="form-group">
                             <input type="text" class="form-control-input" placeholder="Name" required>
                         </div>
