--- a/templates/homepage/team.html
+++ b/templates/homepage/team.html
@@ -10,9 +10,92 @@ Our Team
 
     </div>
     
-    <div class="container">    
+    <div class="container pt-4">    
         <h4 class="text-center">Our Team</h4>
-    
+        <div class="row pt-4">
+            <div class="col-12 col-md-6 p-3">
+                <h6>
+                    EXPERT WEBSITE DESIGNERS
+                </h6>
+                <hr>
+                <p>
+                    The website is the evidence of your
+                    presence in the digital network. And to
+                    your service, we have some amazing
+                    web designers.
+                </p>
+
+            </div>
+
+            <div class="col-12 col-md-6 p-2">
+                <h6>
+                    EXPERT Mobile App Developer
+                </h6>
+                <hr>
+                <p>
+                    The application we have created is the evidence of your
+                    presence in the digital network. And to
+                    your service, we are ready to build for you.
+                </p>
+
+            </div>
+
+            <div class="col-12 col-md-6 p-2">
+                <h6>
+                    TALENTED GRAPHIC ARTISTS
+                </h6>
+                <hr>
+                <p>
+                    Everything comes down to great
+                    graphics. So, to make your work look
+                    amazing, get support from our graphical
+                    geniuses.
+                </p>
+
+            </div>
+
+
+            <div class="col-12 col-md-6 p-2">
+                <h6>
+                    SKILLED CONTENT WRITERS
+                </h6>
+                <hr>
+                <p>
+                    Great content is the fuel that makes
+                    everything operate. All you need is great
+                    content writer.
+                </p>
+
+            </div>
+
+            <div class="col-12 col-md-6 p-2">
+                <h6>
+                    DIGITAL MARKETING STRATEGIST
+                </h6>
+                <hr>
+                <p>
+                    Amazing strategies produces amazing
+                    results.
+                    We’ve the best strategist that can
+                    skillfully give you the idea about what
+                    action to take.
+                </p>
+
+            </div>
+
+            <div class="col-12 col-md-6 p-2">
+                <h6>
+                    SEO EXPERTS
+                </h6>
+                <hr>
+                <p>
+                    Ranking at the top of GOOGLE requires
+                    skill and persistence. But now, it’s all
+                    easy thanks to our experts.
+                </p>
+
+            </div>
+        </div>
     </div> <!-- end of container -->
 
 
