--- a/templates/homepage/categoryblog.html
+++ b/templates/homepage/categoryblog.html
@@ -1,25 +1,11 @@
 {% extends 'homepage/index.html' %}
 {% load static %}
 {% block title %}
-    Blogs 
+    {{category.name}}
 {% endblock title %}
 
-{% block seo %}
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Wake and Tech Nepal blog">
-    <meta name="author" content="Wake and Tech Nepal">
-
-    <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-    <meta property="og:site_name" content="Wake and Tech" /> <!-- website name -->
-    <meta property="og:site" content="" /> <!-- website link -->
-    <meta property="og:title" content="Wake and Tech"/> <!-- title shown in the actual shared post -->
-    <meta property="og:description" content="Wake and Tech Nepal is one of the finest Information Technology, Web design and software development company in Nepal that provides IT solutions, products and services using ultra-modern technologies." /> <!-- description shown in the actual shared post -->
-    <meta property="og:image" content="http://merobilling.com/static/images/logo.jpg" /> <!-- image link, make sure it's jpg -->
-{% endblock seo %}
-    
 
 {% block content %}
-
     <div class="maintain" style="height: 40px;">
 
     </div>
@@ -27,7 +13,7 @@
     <!-- Services -->
     <div id="services" class="cards-1">
         <div class="container">
-            <h4 class="text-center">Blogs</h4>
+            <h4 class="text-center">{{category.name}}</h4>
 
             <div class="row">
                 <div class="col-12 col-lg-12">
@@ -46,8 +32,8 @@
                
            
             <div class="row">
-               
-                <div class="col-lg-10 col-md-10 col-12 text-center">
+            
+                <div class="col-lg-11 col-md-11 m-auto col-12 text-center">
                         <div class="row">
                             {% for i in blog %}
                             <div class="col-md-4 col-12">
@@ -68,21 +54,6 @@
                         </div>
 
                 </div> <!-- end of col -->
-                <div class="col-lg-2 col-md-2 col-12">
-                    <h6 class="text-center">Browse Topic</h6>
-                    {% for i in category  %}
-                    <div class="m-0 pt-2 p-0">
-                        <a href="{%url 'homepage:catblog' i.id%}">
-                            <button class="btn-solid-sm" style="width:100%;">
-                                <i class="fa fa-book"></i>
-                                {{i.name}}
-                            </button>
-                        </a>
-                       
-                    </div>
-                        
-                    {% endfor %}
-                </div>
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of cards-1 -->
