--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -8,17 +8,17 @@
     {% progressive_web_app_meta %}
     {% block seo %}
         <!-- SEO Meta Tags -->
-        <meta name="description" content="Your description">
+        <meta name="description" content="Wake and Tech Nepal is one of the finest Information Technology, Web design and software development company in Nepal that provides IT solutions, products and services using ultra-modern technologies.">
         <meta name="author" content="Wake and Tech Nepal">
 
         <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-        <meta property="og:site_name" content="" /> <!-- website name -->
+        <meta property="og:site_name" content="Wake and Tech" /> <!-- website name -->
         <meta property="og:site" content="" /> <!-- website link -->
-        <meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-        <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-        <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
-        <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
-        <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
+        <meta property="og:title" content="Wake and Tech"/> <!-- title shown in the actual shared post -->
+        <meta property="og:description" content="Wake and Tech Nepal is one of the finest Information Technology, Web design and software development company in Nepal that provides IT solutions, products and services using ultra-modern technologies." /> <!-- description shown in the actual shared post -->
+        <meta property="og:image" content="http://merobilling.com/static/images/logo.jpg" /> <!-- image link, make sure it's jpg -->
+        <!-- <meta property="og:url" content="" /> where do you want your post to link to -->
+        <!-- <meta name="twitter:card" content="summary_large_image"> to have large image post format in Twitter -->
 
         <!-- Webpage Title --> 
     {% endblock seo %}
@@ -27,8 +27,7 @@
     <title>
         
         {% block title %}
-            Wake and Tech Nepal Private Limited
-    
+            Wake and Tech 
         {% endblock title %}
             
     </title>
@@ -91,7 +90,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">More</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown01">
                             {%url 'homepage:ceo' as ceo%}
-                            <li><a class="dropdown-item {%if request.path == ceo%} active {%endif%}" href="{{ceo}}">CEO Message</a></li>
+                            <li><a class="dropdown-item" href="{{ceo}}">CEO Message</a></li>
                             <li><div class="dropdown-divider"></div></li>
 
                             <li><a class="dropdown-item" href="{%url 'homepage:team'%}">Our Team</a></li>
@@ -134,8 +133,8 @@
                     <div class="text-container">
                         <div class="section-title">Welcome to Wake and Tech </div>
                         <h1 class="h1-large">Everything Happens Here| Every Solutions</h1>
-                        <p class="p-large">Wake and Tech is IT company which has been providing solution for past 3 years.</p>
-                        <a class="btn-solid-lg" href="#services">Our Service</a>
+                        <p class="p-large">Wake and Tech Nepal is one of the finest Information Technology, Web design and software development company in Nepal that provides IT solutions, products and services using ultra-modern technologies.</p>
+                        <a class="btn-solid-lg" href="{%url 'homepage:service'%}">Our Service</a>
 
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -151,7 +150,7 @@
 
 
     <!-- Services -->
-    <div id="services" class="cards-1">
+    <div id="services" class="cards-1" style="border: none;">
         <div class="container">
             <h4 class="text-center">Our Services</h4>
             <div class="row">
@@ -160,7 +159,7 @@
                     {% for i in service  %}
                     <!-- Card -->
                     <a href="{%url 'homepage:serviceDetails' i.id%}">
-                        <div class="card me-4">
+                        <div class="card me-4" style="height:auto;">
                             <div class="text-center">
                                 <img src="{{i.image.url}}" alt="{{i.name}}" srcset="" style="height: 140px; width:140px;">
                             </div>
@@ -176,7 +175,7 @@
                  
                     <!-- end of card -->
                     {% endfor %}
-                    <div class="text-center">
+                    <div class="text-center mt-3">
                         <a class="btn-solid-sm" href="{%url 'homepage:service'%}">See Our Services</a>
                     </div>
                     
@@ -210,46 +209,38 @@
     <!-- end of details 1 -->
 
 
-    <!-- Details Modal -->
-    <div id="staticBackdrop" class="modal fade" tabindex="-1" aria-hidden="true">
+      <!-- Details Modal -->
+      <div id="staticBackdrop" class="modal fade" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="row">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     <div class="col-lg-8">
                         <div class="image-container">
-                            <img class="img-fluid" src="{%static 'images/details-modal.jpg'%} " alt="alternative">
+                            <img class="img-fluid" src="https://scontent.fktm14-1.fna.fbcdn.net/v/t39.30808-6/268350580_1523756371326713_4493013445092843791_n.jpg?_nc_cat=100&ccb=1-6&_nc_sid=174925&_nc_ohc=xjeAUmuEsyMAX-OWc8d&tn=r-1kUerRraeUjJJK&_nc_ht=scontent.fktm14-1.fna&oh=00_AT8TYcoeRZYrcLJMGzKPDe8wh2vXm4Qozygm2pe5X4qUng&oe=62854BD2" alt="alternative">
                         </div> <!-- end of image-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-4">
-                        <h3>Goals Setting</h3>
-                        <hr>
-                        <p>In gravida at nunc sodales pretium. Vivamus semper, odio vitae mattis auctor, elit elit semper magna ac tum nico vela spider</p>
-                        <h4>User Feedback</h4>
-                        <p>Sapien vitae eros. Praesent ut erat a tellus posuere nisi more thico cursus pharetra finibus posuere nisi. Vivamus feugiat</p>
+                        <h4>CEO Message</h4>
+                        <p>After the foundation of this company, we have come a long way and we have more to go. We started our journey in 2018 and we have spent these past 4 years continuing to satisfy our clients and building our brand; Wake and Tech Nepal has now become one of the top IT companies in Nepal.</p>
+                        <h4>What we have done?</h4>
+                        <p>In these past 4 years, we have gone through a lot of changes like</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="d-flex">
                                 <i class="fas fa-chevron-right"></i>
-                                <div class="flex-grow-1">Tincidunt sem vel brita bet mala</div>
+                                <div class="flex-grow-1">We have tripled the workforce and have met the demands of the entirety of our clients.</div>
                             </li>
                             <li class="d-flex">
                                 <i class="fas fa-chevron-right"></i>
-                                <div class="flex-grow-1">Sapien condimentum sacoz sil necr</div>
+                                <div class="flex-grow-1">We are now a leading IT company in Nepal</div>
                             </li>
                             <li class="d-flex">
                                 <i class="fas fa-chevron-right"></i>
-                                <div class="flex-grow-1">Fusce interdum nec ravon fro urna</div>
+                                <div class="flex-grow-1">We have reached a responsible and prestigious position and we cannot disappoint our customers</div>
                             </li>
-                            <li class="d-flex">
-                                <i class="fas fa-chevron-right"></i>
-                                <div class="flex-grow-1">Integer pulvinar biolot bat tortor</div>
-                            </li>
-                            <li class="d-flex">
-                                <i class="fas fa-chevron-right"></i>
-                                <div class="flex-grow-1">Id ultricies fringilla fangor raq trinit</div>
-                            </li>
+                          
                         </ul>
-                        <a id="modalCtaBtn" class="btn-solid-reg" href="#">Details</a>
+                        <a id="modalCtaBtn" class="btn-solid-reg" href="{%url 'homepage:ceo'%}">Details</a>
                         <button type="button" class="btn-outline-reg" data-bs-dismiss="modal">Close</button>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -343,7 +334,7 @@
                                 {% for i in testo  %}
                                          <!-- Slide -->
                                 <div class="swiper-slide">
-                                    <div class="card">
+                                    <div class="">
                                        
                                         <div class="card-body">
                                             <p class="testimonial-text">{{i.description}}</p>
@@ -391,7 +382,7 @@
                 <div class="col-lg-12">
                     
                     <!-- Card -->
-                    <div class="card">
+                    <div class="card" style="height: 560px;">
                         <div class="card-body">
                             <div class="card-title">
                                 <img class="decoration-lines" src="{%static 'images/decoration-lines.svg'%} " alt="alternative"><span>Information Website </span><img class="decoration-lines flipped" src="{%static 'images/decoration-lines.svg'%}" alt="alternative">
@@ -411,7 +402,7 @@
                     <!-- end of card -->
 
                     <!-- Card -->
-                    <div class="card">
+                    <div class="card" style="height: 560px;">
                         <div class="card-body">
                             <div class="card-title">
                                 <img class="decoration-lines" src="{%static 'images/decoration-lines.svg'%} " alt="alternative"><span>Ecommerce Site</span><img class="decoration-lines flipped" src="{%static 'images/decoration-lines.svg'%}" alt="alternative">
@@ -433,7 +424,7 @@
                     <!-- end of card -->
 
                     <!-- Card -->
-                    <div class="card">
+                    <div class="card" style="height: 560px;">
                         <div class="card-body">
                             <div class="card-title">
                                 <img class="decoration-lines" src="{%static 'images/decoration-lines.svg'%} " alt="alternative"><span>Design And Boosting</span><img class="decoration-lines flipped" src="{%static 'images/decoration-lines.svg'%}" alt="alternative">
@@ -478,7 +469,7 @@
                 <div class="col-lg-10 offset-lg-1">
                     
                     <!-- Contact Form -->
-                    <form>
+                    <form class="cotactform">
                         <div class="form-group">
                             <input type="text" class="form-control-input" placeholder="Name" required>
                         </div>
@@ -528,7 +519,7 @@
                     <h4>Wake and Tech Nepal Private Limited thank you for visiting us.</h4>
                     <div class="social-container">
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.facebook.com/wakeandtech/" target="_blank">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
