--- a/templates/homepage/per_product.html
+++ b/templates/homepage/per_product.html
@@ -18,7 +18,7 @@
             <h4 class="text-center">{{product.name}}</h4>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                        <div class="card w-100">
+                        <div class="w-100">
                             <div class="text-center">
                                 <img src="{{product.image.url}}" alt="{{product.name}}" srcset="" style="height: auto; width:100%;">
                             </div>
