--- a/templates/homepage/postwork.html
+++ b/templates/homepage/postwork.html
@@ -6,7 +6,9 @@
 
 
 {% block content %}
+        <div class="maintain" style="height: 80px;">
 
+        </div>
        <!-- Contact -->
        <div id="contact" class="form-1">
            <h1>POST YOUR WORK</h1>
